--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Tu Nombre",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.937.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
